ChangeLog 'ClusteringSuite'

2015-11-04 German Llort <german.llort@bsc.es>
	* Fixed bug in the parsing of intercommunicators in the input trace.
	* Upgraded revision to 2.6.6.

2015-10-14 German Llort <german.llort@bsc.es>
	* Code adapted to use Synapse library 2.0 instead of the older version libmrnapp.

2015-01-23 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Solved a regression that broke the sampling version of the
	clustering tool

	* Added a routine in the Utilities to print a backtrace

2015-01-15 Juan Gonzalez <juan.gonzalez@bsc.es>
	* New feature to indicate the time unit used in the 'duration_filter'
	of the clustering definition XML. The possible time units are:
	- 'D' for days
	- 'H' for hours
	- 'M' for minutes
	- 's' or 'S' for minutes
	- 'm' for miliseconds
	- 'u' for microseconds (default if no time unit is given)
	- 'n' nanoseconds

	* Added to new '-o' "subparameters" to finely tune the output trace:
	- 's' to generate an input trace only including the clustering events
	- 'f' to avoid generating the events refering to filtered bursts

	* Clustering Manual updated

2015-01-08 German Llort <german.llort@bsc.es>
	* Added support for TDBSCAN to be launched using the back-end
	attach mode.

2014-12-17 German Llort <german.llort@bsc.es>
	* Changed the way the final DATA.csv is generated in TreeDBSCAN.
	Now we run an external script that merges the files.

2014-12-15 German Llort <german.llort@bsc.es>
	* Added scripts tdbscan-mass-submit and tdbscan-process-results, 
	to submit experiments to the system queue and parse the results

	* Fixed bug in tdbscan-launcher when parsing the environment to 
	detect known system managers

	* Fixed bug in tdbscan-launcher when parsing the available resources
	to generate the topology

	* Fixed paths of the files that are generated in the experiments
	scripts so that the outputs are generated in the current directory

2014-12-11 German Llort <german.llort@bsc.es>
	* Added support for BlueWaters' PBS system manager in